--- a/pom.xml
+++ b/pom.xml
@@ -436,5 +436,6 @@
   </licenses>
 
   <url>http://ensiwiki.ensimag.fr/index.php/Projet_GL</url>
-  <description>Compilateur développé dans le cadre du Projet Génie Logiciel de l'Ensimag.</description>
+  <description>Compilateur développé dans le cadre du Projet Génie Logiciel de l'Ensimag.
+GROUPE 48 YEEEAAAAAAAAAAAAAAAAAAAAAAAAAHHHHHHHHH</description>
 </project>
